# Matrix

./: CMakeLists.txt  README.md  additionalInformation.cpp  arithmeticOperations.cpp  boolFunctions.cpp  fileOperations.cpp  gaussSeidel.cpp  gaussianElimination.cpp  main.cpp  matrix.cpp  matrix.hpp  matrixTransformations.cpp  operatorOverloading.cpp  solveSystem.cpp  triangularFactorization.cpp
Documentation/html/: additional_information_8cpp.html  additional_information_8cpp__incl.map  additional_information_8cpp__incl.md5  annotated.html  arithmetic_operations_8cpp.html  arithmetic_operations_8cpp__incl.map  arithmetic_operations_8cpp__incl.md5  bool_functions_8cpp.html  bool_functions_8cpp__incl.map  bool_functions_8cpp__incl.md5  class_matrix-members.html  class_matrix.html  class_matrix.js  class_matrix_a0be93dbd3f7ffe66f7d823c10fdc429c_cgraph.map  class_matrix_a0be93dbd3f7ffe66f7d823c10fdc429c_cgraph.md5  class_matrix_a0be93dbd3f7ffe66f7d823c10fdc429c_icgraph.map  class_matrix_a0be93dbd3f7ffe66f7d823c10fdc429c_icgraph.md5  class_matrix_a19d41b05a82e7a33d3d2d72304305668_icgraph.map  class_matrix_a19d41b05a82e7a33d3d2d72304305668_icgraph.md5  class_matrix_a1dda6b86a7b258ad14472f15d2df1677_cgraph.map  class_matrix_a1dda6b86a7b258ad14472f15d2df1677_cgraph.md5  class_matrix_a220da8c4049cf5c1ba74ca9bed549604_cgraph.map  class_matrix_a220da8c4049cf5c1ba74ca9bed549604_cgraph.md5  (+117 more)
Documentation/latex/: annotated.tex  (+69 more)
src/: additionalInformation.cpp  arithmeticOperations.cpp  boolFunctions.cpp  fileOperations.cpp  find_zero.cpp  gaussJacobi.cpp  gaussSeidel.cpp  matrix.cpp
(+61 files in other folders)
